test/errors/type/int/tofloat.yasl
echo mt.lookup(0, .tofloat)(1.0)
